--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@swimlane/ngx-charts": "^17.0.1",
+    "@types/chart.js": "^2.9.32",
+    "angular-bootstrap-md": "^11.0.0",
     "angularx-social-login": "^3.5.5",
+    "animate.css": "^4.1.1",
+    "chart.js": "^2.9.4",
+    "hammerjs": "^2.0.8",
+    "ng2-charts": "^2.4.2",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
