page not found component and connected opportunities to audits

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~11.2.9",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@swimlane/ngx-charts": "^17.0.1",
+    "@syncfusion/ej2-angular-grids": "^19.1.57",
     "@types/chart.js": "^2.9.32",
+    "ag-grid-angular": "^25.1.0",
     "angular-bootstrap-md": "^11.0.0",
     "angularx-social-login": "^3.5.5",
     "animate.css": "^4.1.1",
